<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/image_detail_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_gray">

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:persistentDrawingCache="animation" >
    </android.support.v4.view.ViewPager>
    
    <RelativeLayout
	    android:id="@+id/image_header_menu"
	    android:layout_width="match_parent"
	    android:layout_height="50dp"
	    android:layout_gravity="top"
	    android:background="@color/white_gray_1"
	    android:orientation="horizontal" >
		
	    <ImageView
			android:id="@+id/image_back_botton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="14dp"
			android:src="@drawable/ic_back"
			android:contentDescription="@string/botton_description">
		</ImageView>
		
	    <LinearLayout
	        android:layout_width="match_parent"
	    	android:layout_height="match_parent"
	    	android:gravity="center">
	    	
	        <FrameLayout 
	            android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginRight="10dp">
	            <ProgressBar
	            	android:id="@+id/image_detail_load"
			        style="?android:attr/progressBarStyleSmall"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center"/>
		        
		        <ImageView
					android:id="@+id/user_face"
					android:layout_width="40dp"
					android:layout_height="40dp"
					android:src="@drawable/ic_back"
					android:contentDescription="@string/botton_description">
				</ImageView>
	        </FrameLayout>
	        
	        
			
			<TextView
				android:id="@+id/user_nickname"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/menu_top"
				android:textColor="@color/menu_grid"
				android:textSize="18sp"
				android:textStyle="bold" >
			</TextView>
	    </LinearLayout>
		
	</RelativeLayout>

    <LinearLayout
        android:id="@+id/image_detail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:background="@color/black_opacity_5"
        android:gravity="center"
        android:layout_marginBottom="50dp" >
	        <ProgressBar
	            android:id="@+id/image_detail_load"
		        style="?android:attr/progressBarStyleSmall"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="10dp"/>
	     	<TextView
	     	    android:id="@+id/image_detail_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/image_detail"
				android:textColor="@color/white_gray_2"
				android:textSize="16sp"
				android:textStyle="bold" >
	       </TextView>
    </LinearLayout>

</FrameLayout>